Fixed the scrollbar in the gallery + taking animation.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -113,6 +113,7 @@ canvas {
 }
 
 ::-webkit-scrollbar {
+  width: 6px;
   height: 6px;
 }
 
